objects/vlocity_cmt__RuleAssignment__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__HeaderId__c</fullName>
        <formula>vlocity_cmt__RuleId__r.vlocity_cmt__HeaderId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HeaderId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectId__c</fullName>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleId__c</fullName>
        <label>Vlocity Rule</label>
        <referenceTo>vlocity_cmt__Rule__c</referenceTo>
        <relationshipLabel>Vlocity Rule Assignments</relationshipLabel>
        <relationshipName>Vlocity_Rule_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleType__c</fullName>
        <formula>TEXT(vlocity_cmt__RuleId__r.vlocity_cmt__RuleType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Type</label>
        <type>Text</type>
    </fields>
    <label>Vlocity Rule Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Rule Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>